# zkVerify-EVM-Parachain

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  HEADER-GPL3  Makefile.toml  README.md
.cargo/: audit.toml  zepter-ci.yaml  zepter.yaml  zepter_format.yaml
.config/: taplo.toml  zepter.yaml
.github/: CODEOWNERS  actionlint.yaml  env
.github/actions/build-docker-image/: action.yml
.github/actions/cmd-in-docker/: action.yml
.github/scripts/: check-workspace.py  clean_ci.sh
.github/workflows/: CI-audit.yml  CI-build-docker-image.yml  CI-build.yml  CI-cache-cleanup.yaml  CI-cache-default-branch.yml  CI-check-lockfile.yml  CI-docker-build-publish.yml  CI-feature-propagation.yml  CI-lint-format.yml  CI-machete.yml  CI-orchestrator.yml  CI-tag-orchestrator.yml  CI-test-bench.yml  CI-test.yml  build-test.yml  global.yml  quick-checks.yml  tag-orchestrator.yml
ci/: docker-compose.yml  docker.sh  entrypoint.sh  publish-docker-image.sh  setup_env.sh
client/: README.md
client/evm-tracing/: Cargo.toml
client/evm-tracing/src/: lib.rs
client/evm-tracing/src/formatters/: blockscout.rs  call_tracer.rs  mod.rs  raw.rs  trace_filter.rs
client/evm-tracing/src/listeners/: call_list.rs  mod.rs  raw.rs
client/evm-tracing/src/types/: block.rs  mod.rs  serialization.rs  single.rs
client/rpc-core/debug/: Cargo.toml
client/rpc-core/debug/src/: lib.rs
client/rpc-core/types/: Cargo.toml
client/rpc-core/types/src/: lib.rs
client/rpc/debug/: Cargo.toml  README.md
client/rpc/debug/src/: lib.rs
docker/: README.md
docker/compose/: test-docker-compose.yaml
docker/dockerfiles/: test-docker-compose.yaml  vflow-node.Dockerfile  zkvparaevm-node.Dockerfile  zkvparaevm-spec-builder.Dockerfile
docker/dockerfiles/staging/: README.md
docker/resources/envs/parachain/: .env.alith  .env.baltathar  .env.rpc
docker/resources/envs/relaychain/: .env.alice  .env.bob
docker/scripts/: entrypoint.sh
node/: Cargo.toml  build.rs
node/chain-specs/: vflow_volta.json  zkverify_evm_vflow.json
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  eth.rs  main.rs  service.rs
node/src/rpc/: eth.rs  mod.rs  tracing.rs
node/tests/: node_version.rs
pallets/benchmark-dummy/: Cargo.toml
pallets/benchmark-dummy/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/deployment-permissions/: Cargo.toml
pallets/deployment-permissions/src/: benchmarking.rs  lib.rs  mock.rs  runner.rs  tests.rs  weights.rs
pallets/network_type/: Cargo.toml
pallets/network_type/src/: lib.rs
pallets/parachain-inherent/: Cargo.toml
pallets/parachain-inherent/src/: lib.rs  mock.rs
pallets/permissioned-deploy/: Cargo.toml
pallets/permissioned-deploy/src/: mock.rs  tests.rs  weights.rs
primitives/: README.md
primitives/ext/: Cargo.toml
primitives/ext/src/: lib.rs
primitives/rpc/debug/: Cargo.toml
primitives/rpc/debug/src/: lib.rs
primitives/rpc/evm-tracing-events/: Cargo.toml
primitives/rpc/evm-tracing-events/src/: evm.rs  gasometer.rs  lib.rs  runtime.rs
runtime/: Cargo.toml  build.rs
runtime/evm_tracer/: Cargo.toml
runtime/evm_tracer/src/: lib.rs
runtime/src/: benchmark.rs  configs.rs  constants.rs  genesis_config_presets.rs  lib.rs  precompiles.rs  tests.rs  types.rs  weights.rs  xcm_teleport.rs
runtime/src/configs/: asset_config.rs  aura.rs  authorship.rs  consensus.rs  ethereum_xcm.rs  evm.rs  governance.rs  mod.rs  monetary.rs  root_testing.rs  session.rs  system.rs  timestamp.rs  transaction_payment.rs  xcm.rs  xcm_config.rs
runtime/src/configs/governance/: mod.rs  origins.rs  tracks.rs
runtime/src/tests/: constants_test.rs  contract.sol  evm_tracing.rs  multiplier.rs  new_test.rs  permissioned_deploy.rs  storage.rs  use_correct_weights.rs  xcm_eth.rs  xcm_teleport_integration.rs
runtime/src/tests/new_test/: mock_runtime.rs
runtime/src/weights/: block_weights.rs  cumulus_pallet_parachain_system.rs  cumulus_pallet_xcmp_queue.rs  db.rs  extrinsic_weights.rs  frame_system.rs  frame_system_extensions.rs  mod.rs  pallet_assets.rs  pallet_balances.rs  pallet_benchmark_dummy.rs  pallet_collator_selection.rs  pallet_colleator_selection.rs  pallet_conviction_voting.rs  pallet_deployment_permissions.rs  pallet_evm.rs  pallet_message_queue.rs  pallet_multisig.rs  pallet_permissioned_deploy.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_referenda.rs  pallet_scheduler.rs  pallet_session.rs  pallet_sudo.rs  pallet_timestamp.rs  pallet_transaction_payment.rs  pallet_treasury.rs  pallet_utility.rs  pallet_whitelist.rs  pallet_xcm.rs  pallet_xcm_benchmarks.rs  xcm.rs
runtime/src/weights/pallet_xcm_benchmarks/: fungible.rs  generic.rs
runtime/src/weights/xcm/: pallet_xcm_benchmarks_fungible.rs  pallet_xcm_benchmarks_generic.rs
scripts/: bench.sh  bench_cfg.sh  docker-compose-bench.yml  docker-compose-local.yml  generate-benchmarks.sh  reference_machine_run_all.sh  run_all_benchmarks.sh  zombienet.sh
scripts/templates/: deploy-weight-template-xcm.hbs  deploy-weight-template.hbs  zkv-evm-deploy-weight-template-xcm.hbs
tests/: README.md  moonwall.config.json  package.json  pnpm-lock.yaml
tests/configs/: custom_chain_spec.json  zombienet-config.json
tests/configs/chain_specs/: readme.md  test_chain_spec.json
tests/contracts/src/: SimpleProxy.sol  SimpleStorage.sol
tests/helpers/: constants.ts  index.ts  session.ts
tests/scripts/: build-tracing-wasm.sh  compile-contracts.ts
tests/suites/dev/: D01-test-basic.ts  D08-test-mempool-rpc-methods.ts  D10-test-nonce.ts  D11-test-debug-rpc.ts
tests/suites/dev-debug-rpc/: D01-test-debug-rpc.ts
tests/suites/tmp/: D08-test-custom-asset.ts  D10-test-nonce.ts  test-zombie-custom-ZC02_proxy-contract.ts
tests/suites/zombie/: Z01-test-zombie.ts  Z03-test-zombie-eth-debug.ts  Z04-test-zombie-existential-deposit.ts  Z05-test-zombie-custom-transaction.ts
tests/suites/zombie-custom/: ZC01-test-zombie-custom.ts  ZC02-test-zombie-negative-transactions.ts
utils/test/: Cargo.toml
utils/test/src/: lib.rs
zombienet-config/: README.md  devnet.toml
