[workspace.package]
authors = ["Horizen Labs <admin@horizenlabs.io>"]
edition = "2021"
repository = "https://github.com/zkVerify/zkVerify-EVM-Parachain"
homepage = "https://www.horizenlabs.io/"
license = "GPL-3.0-only"

[workspace]
members = [
	"client/evm-tracing",
	"client/rpc-core/debug",
	"client/rpc-core/types",
	"client/rpc/debug",
	"node",
	"pallets/network_type",
	"pallets/parachain-inherent",
	"primitives/ext",
	"primitives/rpc/debug",
	"primitives/rpc/evm-tracing-events",
	"runtime",
	"runtime/evm_tracer",
	"utils/test",
]
resolver = "2"

[workspace.dependencies]

# Local
cumulus-client-parachain-inherent = { path = "pallets/parachain-inherent", default-features = false }
evm-tracing-events = { path = "primitives/rpc/evm-tracing-events", default-features = false }
pallet-network-type = { path = "pallets/network_type", default-features = false }
test-utils = { path = "utils/test", default-features = false }
zkv-para-evm-client-evm-tracing = { path = "client/evm-tracing" }
zkv-para-evm-evm-tracer = { path = "runtime/evm_tracer", default-features = false }
zkv-para-evm-primitives-ext = { path = "primitives/ext", default-features = false }
zkv-para-evm-rpc-core-debug = { path = "client/rpc-core/debug" }
zkv-para-evm-rpc-core-types = { path = "client/rpc-core/types" }
zkv-para-evm-rpc-debug = { path = "client/rpc/debug" }
zkv-para-evm-rpc-primitives-debug = { path = "primitives/rpc/debug", default-features = false }
zkv-para-evm-runtime = { path = "runtime" }

# Common
async-trait = { version = "0.1.42" }
clap = { version = "4.5.3", features = ["derive"] }
color-print = "0.3.4"
futures = "0.3.28"
hex = "0.4.3"
hex-literal = "0.4.1"
jsonrpsee = { version = "0.24.9", default-features = false }
log = { version = "0.4.20", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.10.0", default-features = false }
serde = { version = "1.0.188", default-features = false }
serde_derive = { version = "1.0.188", default-features = false }
serde_json = "1.0.108"
smallvec = "1.11.0"
tracing = { version = "0.1.37", default-features = false }

# Substrate
frame-benchmarking = { version = "38.0.0", default-features = false }
frame-benchmarking-cli = { version = "43.0.0", default-features = false }
frame-executive = { version = "38.0.0", default-features = false }
frame-support = { version = "38.2.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
frame-system-benchmarking = { version = "38.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "34.0.0", default-features = false }
frame-try-runtime = { version = "0.44.0", default-features = false }
pallet-assets = { version = "40.0.0", default-features = false }
pallet-aura = { version = "37.0.0", default-features = false }
pallet-authorship = { version = "38.0.0", default-features = false }
pallet-balances = { version = "39.0.1", default-features = false }
pallet-message-queue = { version = "41.0.2", default-features = false }
pallet-multisig = { version = "38.0.0", default-features = false }
pallet-proxy = { version = "38.0.0", default-features = false }
pallet-session = { version = "38.0.0", default-features = false }
pallet-sudo = { version = "38.0.0", default-features = false }
pallet-timestamp = { version = "37.0.0", default-features = false }
pallet-transaction-payment = { version = "38.0.2", default-features = false }
pallet-transaction-payment-rpc = { version = "41.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "38.0.0", default-features = false }
pallet-treasury = { version = "37.0.0", default-features = false }
pallet-utility = { version = "38.0.0", default-features = false }
sc-basic-authorship = { version = "0.45.0", default-features = false }
sc-chain-spec = { version = "38.0.0", default-features = false }
sc-cli = { version = "0.47.0", default-features = false }
sc-client-api = { version = "37.0.0", default-features = false }
sc-consensus = { version = "0.44.0", default-features = false }
sc-consensus-aura = { version = "0.45.0", default-features = false }
sc-consensus-manual-seal = { version = "0.46.0", default-features = false }
sc-executor = { version = "0.40.1", default-features = false }
sc-network = { version = "0.45.6", default-features = false }
sc-network-sync = { version = "0.44.1", default-features = false }
sc-offchain = { version = "40.0.0", default-features = false }
sc-rpc = { version = "40.0.0", default-features = false }
sc-service = { version = "0.46.0", default-features = false }
sc-sysinfo = { version = "38.0.0", default-features = false }
sc-telemetry = { version = "25.0.0", default-features = false }
sc-tracing = { version = "37.0.1", default-features = false }
sc-transaction-pool = { version = "37.0.0", default-features = false }
sc-transaction-pool-api = { version = "37.0.0", default-features = false }
sc-utils = { version = "17.0.0", default-features = false }
sp-api = { version = "34.0.0", default-features = false }
sp-arithmetic = { version = "26.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-blockchain = { version = "37.0.1", default-features = false }
sp-consensus-aura = { version = "0.40.0", default-features = false }
sp-consensus-slots = { version = "0.40.1", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-crypto-hashing = { version = "0.1.0", default-features = false }
sp-externalities = { version = "0.29.0", default-features = false }
sp-genesis-builder = { version = "0.15.1", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-keystore = { version = "0.40.0", default-features = false }
sp-offchain = { version = "34.0.0", default-features = false }
sp-runtime = { version = "39.0.5", default-features = false, features = ["serde"] }
sp-runtime-interface = { version = "28.0.0", default-features = false }
sp-session = { version = "36.0.0", default-features = false }
sp-staking = { version = "36.0.0", default-features = false }
sp-state-machine = { version = "0.43.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "21.0.0", default-features = false }
sp-timestamp = { version = "34.0.0", default-features = false }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-trie = { version = "37.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }
sp-weights = { version = "31.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0" }
substrate-frame-rpc-system = { version = "39.0.0", default-features = false }
substrate-prometheus-endpoint = { version = "0.17.0", default-features = false }
substrate-wasm-builder = { version = "24.0.1" }

# Polkadot
pallet-xcm = { version = "17.0.1", default-features = false }
polkadot-cli = { package = "zkv-cli", git = "https://github.com/zkVerify/zkVerify", tag = "0.9.1-0.13.0" }
polkadot-parachain-primitives = { version = "14.0.0", default-features = false }
polkadot-primitives = { version = "16.0.0", default-features = false }
polkadot-runtime-common = { version = "17.0.0", default-features = false }
xcm = { version = "14.2.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "17.0.4", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "17.0.1", package = "staging-xcm-executor", default-features = false }

# Cumulus
assets-common = { version = "0.18.3", default-features = false }
cumulus-client-cli = { version = "0.18.0", default-features = false }
cumulus-client-collator = { version = "0.18.0", default-features = false }
cumulus-client-consensus-aura = { version = "0.18.1", default-features = false }
cumulus-client-consensus-common = { version = "0.18.0", default-features = false }
cumulus-client-consensus-proposer = { version = "0.16.0", default-features = false }
cumulus-client-service = { version = "0.19.0", default-features = false }
cumulus-pallet-aura-ext = { version = "0.17.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.17.1", default-features = false }
cumulus-pallet-session-benchmarking = { version = "19.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.17.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "=0.17.1", default-features = false }
cumulus-primitives-aura = { version = "0.15.0", default-features = false }
cumulus-primitives-core = { version = "0.16.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.16.0", default-features = false }
cumulus-primitives-storage-weight-reclaim = { version = "8.0.0", default-features = false }
cumulus-primitives-utility = { version = "0.17.0", default-features = false }
cumulus-relay-chain-interface = { version = "0.18.0", default-features = false }
cumulus-test-relay-sproof-builder = { version = "0.16.0", default-features = false }
pallet-collator-selection = { version = "19.0.0", default-features = false }
parachain-info = { version = "0.17.0", package = "staging-parachain-info", default-features = false }
parachains-common = { version = "18.0.0", default-features = false }

# EVM
fc-api = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
fc-consensus = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
fc-db = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
fc-mapping-sync = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
fc-rpc = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
fc-rpc-core = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
fc-storage = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
fp-account = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false, features = [
	"serde",
] }
fp-dynamic-fee = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
fp-evm = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
fp-rpc = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
fp-self-contained = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
pallet-base-fee = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
pallet-ethereum = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false, features = [
	"forbid-evm-reentrancy",
] }
pallet-evm = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false, features = [
	"forbid-evm-reentrancy",
] }
pallet-evm-chain-id = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }
precompile-utils = { git = "https://github.com/HorizenLabs/frontier", branch = "stable2409", default-features = false }

ethereum = { version = "0.15.0", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.14.1", default-features = false }
evm = { version = "0.41.1", default-features = false }
evm-gasometer = { version = "0.41.0", default-features = false }
evm-runtime = { version = "0.41.0", default-features = false }

# Other
environmental = { version = "1.1.2", default-features = false }
tokio = { version = "1.13" }

[patch.crates-io]
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/zkVerify/zkVerify.git", tag = "0.9.1-0.13.0" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/zkVerify/zkVerify.git", tag = "0.9.1-0.13.0" }
polkadot-parachain-lib = { git = "https://github.com/zkVerify/zkVerify.git", tag = "0.9.1-0.13.0" }

[workspace.lints.clippy]
large_enum_variant = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true


[profile.release]
opt-level = 3
panic = "unwind"
